// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Dl allowsTags 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl checkGrammar 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl checkGrammar 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl checkGrammar 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl checkGrammar 4`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl checkHighlight 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl checkHighlight 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl checkHighlight 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl checkHighlight 4`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl checkSpaces 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl checkSpaces 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl checkSpaces 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl checkSpaces 4`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl className 1`] = `
<dl
  className="uu5-bricks-dl my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl content 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl content 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl content 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl content 4`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl controlled 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl controlled 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl controlled 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl controlled 4`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl default props 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl disabled 1`] = `
<dl
  className="uu5-bricks-dl uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</dl>
`;

exports[`UU5.Bricks.Dl disabled 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl disabled 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl disabled 4`] = `
<dl
  className="uu5-bricks-dl uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</dl>
`;

exports[`UU5.Bricks.Dl dynamic 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl dynamic 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl dynamic 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl dynamic 4`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl example docKit UU5.Bricks.Dl render without crash 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Dt
    className={null}
    content="Google"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Dd
    className={null}
    content="It is an American multinational technology company specializing in Internet-related services and products that include online advertising technologies, search, cloud computing, software, and hardware."
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID03"
    ignoreInnerHTML={false}
    key="uuID03"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</dl>
`;

exports[`UU5.Bricks.Dl footer 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Footer
    className={null}
    content={
      <div>
        Footer of section
      </div>
    }
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID-footer"
    ignoreInnerHTML={false}
    key="uuID-footer"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</dl>
`;

exports[`UU5.Bricks.Dl header 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Header
    className={null}
    colorSchema={null}
    content={
      <div>
        Header of section
      </div>
    }
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID-header"
    ignoreInnerHTML={false}
    key="uuID-header"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
  />
</dl>
`;

exports[`UU5.Bricks.Dl hidden 1`] = `
<dl
  className="uu5-bricks-dl uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl hidden 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl hidden 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl hidden 4`] = `
<dl
  className="uu5-bricks-dl uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl id 1`] = `
<dl
  className="uu5-bricks-dl"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl ignoreHTML 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl ignoreHTML 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl ignoreHTML 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl ignoreHTML 4`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 4`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 5`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 6`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 7`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 8`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 9`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 10`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 11`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 12`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 13`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 14`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 15`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 16`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 17`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 18`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 19`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 20`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 21`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 22`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 23`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 24`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 25`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 26`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 27`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl level 28`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl mainAttrs 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl name 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 4`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 5`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 6`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 7`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 8`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 9`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 10`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 11`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 12`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 13`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 14`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 15`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 16`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 17`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 18`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Dl nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Dl noIndex 1`] = `
<dl
  className="uu5-bricks-dl uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl noIndex 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl noIndex 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl noIndex 4`] = `
<dl
  className="uu5-bricks-dl uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl pureRender 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl pureRender 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl pureRender 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl pureRender 4`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl selected 1`] = `
<dl
  className="uu5-bricks-dl uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl selected 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl selected 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl selected 4`] = `
<dl
  className="uu5-bricks-dl uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl style 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Dl style 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Dl style 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Dl style 4`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Dl textCorrector 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl textCorrector 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl textCorrector 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl textCorrector 4`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl tooltip 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;

exports[`UU5.Bricks.Dl underline 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl underline 2`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl underline 3`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dl underline 4`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;
